# kafui

./: .gitignore  Cargo.toml  config.json
src/: app.rs  config.rs  kafka.rs  main.rs  model.rs  offsets_consumer.rs  ui.rs  utils.rs
src/handlers/: mod.rs  topic_detail.rs  topic_list.rs
