[package]
name = "kafui"
version = "0.1.0"
authors = ["François Blarel <francois.blarel@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.24.0", features = ["cmake-build", "ssl"] }
clap = "2.18.0"
libc = "0.2.0"
byteorder = "1.3.4"
#use bytes?
crossterm = "0.17"
tui = { version = "0.12", default-features = false, features = ['crossterm'] }
log ="0.4.11"
env_logger = "0.8.2"
futures="0.3.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_derive = "1.0.117"
serde_json = "1.0.59"
#tokio={ version="0.3.3", features = ["macros", "rt-multi-thread", "rt", "time"] }
tokio = { version = "0.2", features = ["macros", "rt-threaded"]}

[dev-dependencies]

[[example]]
name="myexample"